Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARD.H

typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef struct
{
	USHORT  type;               //Valid in all versions
	USHORT  count;              //Valid in all versions
	ULONG   timestamp;          //Valid in all versions
	USHORT  activity;           //Valid in all versions
	USHORT  error;              //Valid in all versions
	USHORT  cwd1;               //Valid in all versions
	USHORT  cwd2;               //Valid in all versions
	USHORT  swd1;               //Valid in all versions
	USHORT  swd2;               //Valid in all versions
	USHORT  datacount;          //Valid in all versions
	USHORT  data[40];           //Variable length (don't exceed data[datacount-1])
} SEQRECORD1553;
typedef struct
{
	ULONG   timestamph;         //Valid if version of base record (SEQRECORD1553) >= 1
	USHORT  resptime1;          //Valid if version of base record (SEQRECORD1553) >= 1
	USHORT  resptime2;          //Valid if version of base record (SEQRECORD1553) >= 1
} SEQRECORDMORE1553;
typedef struct
{
	USHORT  type;               //Valid in all versions
	USHORT  count;              //Valid in all versions
	ULONG   timestamp;          //Valid in all versions
	USHORT  activity;           //Valid in all versions
	USHORT  decgap;             //Valid if version >= 1
	ULONG   data;               //Valid in all versions
	ULONG   timestamph;         //Valid if version >= 1
} SEQRECORD429;
typedef struct
{
	USHORT  type;               //Valid in all versions
	USHORT  count;              //Valid in all versions
	ULONG   timestamp;          //Valid in all versions
	USHORT  activity;           //Valid in all versions
	USHORT  wordnum;            //Valid in all versions
	USHORT  subframe;           //Valid in all versions
	USHORT  superframe;         //Valid in all versions
	USHORT  data;               //Valid in all versions
	USHORT  rsvd9;              //Valid if version >= 1
	ULONG   timestamph;         //Valid if version >= 1
} SEQRECORD717;
typedef struct
{
	USHORT  type;               //Valid in all versions
	USHORT  count;              //Valid in all versions
	ULONG   timestamp;          //Valid in all versions
	USHORT  activity;           //Valid in all versions
	USHORT  datacount;          //Valid in all versions
	USHORT  data[100];          //Valid in all versions
	USHORT  extra[16];          //Valid if version >= 1
	USHORT  bitcount;           //Valid if version >= 1
	USHORT  rsvd123;            //Valid if version >= 1
	ULONG   timestamph;         //Valid if version >= 1
} SEQRECORD708;
typedef struct
{
	USHORT  type;               //Valid in all versions
	USHORT  count;              //Valid in all versions
	ULONG   timestamp;          //Valid in all versions
	ULONG   timestamph;         //Valid in all versions
	USHORT  activity;           //Valid in all versions
	USHORT  datacount;          //Valid in all versions
	USHORT  data[32];           //Valid in all versions
} SEQRECORDCSDB;
typedef struct
{
	USHORT  type;               //Valid in all versions
	USHORT  count;              //Valid in all versions
	USHORT  bank;               //Valid in all versions
	USHORT  state;              //Valid in version 0
	ULONG   timestamp;          //Valid in all versions
	ULONG   timestamph;         //Valid in all versions
	USHORT  change;             //Valid in version 1
	USHORT  value;              //Valid in version 1
} SEQRECORDDIO;
typedef struct
{
	USHORT  type;               //Valid in all versions
	USHORT  count;              //Valid in all versions
	USHORT  activity;           //Valid in all versions
	USHORT  error;              //Valid in all versions
	ULONG   timestamp;          //Valid in all versions
	ULONG   timestamph;         //Valid in all versions
	USHORT  cwd;                //Valid in all versions
	USHORT  cwdinfo;            //Valid in all versions
	USHORT  swd;                //Valid in all versions
	USHORT  swdinfo;            //Valid in all versions
	USHORT  resptime;           //Valid in all versions
	USHORT  datacount;          //Valid in all versions
	USHORT  data[40];           //Variable length (don't exceed data[datacount-1])
} SEQRECORDEBR;
typedef struct
{
	LPUSHORT pRecFirst;
	LPUSHORT pRecNext;
	LPUSHORT pRecLast;
} SEQFINDINFO;
typedef struct
{
	USHORT  days;
	USHORT  hours;
	USHORT  min;
	USHORT  sec;
	USHORT  msec;
	USHORT  usec;
} BTIIRIGTIME;