Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARDNET.CS

using System;
using System.Runtime.InteropServices;

namespace BALLARD
{
    public class BTICARD
    {
        /**
        *
        *  BTICard WIN32 DRIVER  Version 2.7.5  (02/04/2015)
        *  Copyright (c) 2001-2015
        *  Ballard Technology, Inc.
        *  www.ballardtech.com
        *  support@ballardtech.com
        *  ALL RIGHTS RESERVED
        *
        *  NAME:   BTICardNET.CS -- C# 32-bit/64-bit
        *                       BTICard Driver Include Header File.
        *
        **/

        /**
        *
        *  Structs used by the BTICard Driver.
        *
        **/

        [StructLayout(LayoutKind.Sequential)]
        public struct SEQRECORD1553
        {
            public UInt16 typeval;               //Valid in all versions
            public UInt16 count;              //Valid in all versions
            public UInt32 timestamp;          //Valid in all versions
            public UInt16 activity;           //Valid in all versions
            public UInt16 errorval;              //Valid in all versions
            public UInt16 cwd1;               //Valid in all versions
            public UInt16 cwd2;               //Valid in all versions
            public UInt16 swd1;               //Valid in all versions
            public UInt16 swd2;               //Valid in all versions
            public UInt16 datacount;          //Valid in all versions
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 40)]
            public UInt16[] data;	//Variable length (don't exceed data[datacount-1])
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct SEQRECORDMORE1553
        {
            public UInt32 timestamph;         //Valid if version of baseval record (SEQRECORD1553) >= 1
            public UInt16 resptime1;          //Valid if version of baseval record (SEQRECORD1553) >= 1
            public UInt16 resptime2;          //Valid if version of baseval record (SEQRECORD1553) >= 1
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct SEQRECORD429
        {
            public UInt16 typeval;               //Valid in all versions
            public UInt16 count;              //Valid in all versions
            public UInt32 timestamp;          //Valid in all versions
            public UInt16 activity;           //Valid in all versions
            public UInt16 decgap;             //Valid if version >= 1
            public UInt32 data;               //Valid in all versions
            public UInt32 timestamph;         //Valid if version >= 1
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct SEQRECORD717
        {
            public UInt16 typeval;               //Valid in all versions
            public UInt16 count;              //Valid in all versions
            public UInt32 timestamp;          //Valid in all versions
            public UInt16 activity;           //Valid in all versions
            public UInt16 wordnum;            //Valid in all versions
            public UInt16 subframe;           //Valid in all versions
            public UInt16 superframe;         //Valid in all versions
            public UInt16 data;               //Valid in all versions
            public UInt16 rsvd9;              //Valid if version >= 1
            public UInt32 timestamph;         //Valid if version >= 1
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct SEQRECORD708
        {
            public UInt16 typeval;               //Valid in all versions
            public UInt16 count;              //Valid in all versions
            public UInt32 timestamp;          //Valid in all versions
            public UInt16 activity;           //Valid in all versions
            public UInt16 datacount;          //Valid in all versions
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 100)]
            public UInt16[] data;	//Valid in all versions
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 16)]
            public UInt16[] extra;	//Valid if version >= 1
            public UInt16 bitcount;           //Valid if version >= 1
            public UInt16 rsvd123;            //Valid if version >= 1
            public UInt32 timestamph;         //Valid if version >= 1
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct SEQRECORDCSDB
        {
            public UInt16 typeval;               //Valid in all versions
            public UInt16 count;              //Valid in all versions
            public UInt32 timestamp;          //Valid in all versions
            public UInt32 timestamph;         //Valid in all versions
            public UInt16 activity;           //Valid in all versions
            public UInt16 datacount;          //Valid in all versions
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 32)]
            public UInt16[] data;	//Valid in all versions
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct SEQRECORDDIO
        {
            public UInt16 typeval;               //Valid in all versions
            public UInt16 count;              //Valid in all versions
            public UInt16 bank;               //Valid in all versions
            public UInt16 state;              //Valid in version 0
            public UInt32 timestamp;          //Valid in all versions
            public UInt32 timestamph;         //Valid in all versions
            public UInt16 change;             //Valid in version 1
            public UInt16 value;              //Valid in version 1
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct SEQRECORDEBR
        {
            public UInt16 typeval;               //Valid in all versions
            public UInt16 count;              //Valid in all versions
            public UInt16 activity;           //Valid in all versions
            public UInt16 errorval;              //Valid in all versions
            public UInt32 timestamp;          //Valid in all versions
            public UInt32 timestamph;         //Valid in all versions
            public UInt16 cwd;                //Valid in all versions
            public UInt16 cwdinfo;            //Valid in all versions
            public UInt16 swd;                //Valid in all versions
            public UInt16 swdinfo;            //Valid in all versions
            public UInt16 resptime;           //Valid in all versions
            public UInt16 datacount;          //Valid in all versions
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 40)]
            public UInt16[] data;	//Variable length (don't exceed data[datacount-1])
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct SEQFINDINFO
        {
            public unsafe UInt16* pRecFirst;
            public unsafe UInt16* pRecNext;
            public unsafe UInt16* pRecLast;
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct BTIIRIGTIME
        {
            public UInt16 days;
            public UInt16 hours;
            public UInt16 min;
            public UInt16 sec;
            public UInt16 msec;
            public UInt16 usec;
        }

        /**
        *
        *  BTICard Driver functions.
        *
        **/
